--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "litho",
+  "name": "GDPlace-Site",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://www.yourdomain.com",
@@ -27,11 +27,15 @@
     "react-countdown": "^2.3.2",
     "react-countup": "^6.2.0",
     "react-dom": "^18.1.0",
+    "react-redux": "7.2.2",
     "react-floating-whatsapp": "^5.0.8",
     "react-google-recaptcha": "^2.1.0",
     "react-in-viewport": "^1.0.0-alpha.30",
     "react-js-progressbar": "^1.1.1",
     "react-modal": "^3.16.1",
+    "redux": "4.0.5",
+    "redux-debounced": "0.5.0",
+    "redux-thunk": "2.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
